# LocalClassyFire

./: .gitignore  local_classyfire.db  pyproject.toml
cli/: update.py
local_classyfire/cli/: io.py  lookup_runner.py  main.py  missing_query_refetch_runner.py  output.py  progress.py
local_classyfire/cli/annotators/: batch_writer.py  classification.py  mgf.py  msdataset.py  msp.py  text_records.py
local_classyfire/cli/commands/: annotate.py  (+2 more)
local_classyfire/models/: AlternativeParent.py  Ancestor.py  Classification.py  ClassificationAlternativeParent.py  ClassificationAncestor.py  ClassificationExternalDescriptor.py  ClassificationIntermediateNode.py  ClassificationNode.py  ClassificationPredictedChebiTerm.py  ClassificationPredictedLipidmapsTerm.py  ClassificationSubstituent.py  ClassyFireQuery.py  ExternalDescriptor.py  ExternalDescriptorAnnotation.py  ExternalDescriptorAnnotationLink.py  IntermediateNode.py  MolecularFramework.py  PredictedChebiTerm.py  PredictedLipidmapsTerm.py  Substituent.py  __init__.py  alternative_parent.py  ancestor.py  classification_levels.py  classyfire_missing_query.py  classyfire_query.py  external_descriptor.py  intermediate_node.py  molecular_framework.py  predicted_chebi_term.py  predicted_lipidmaps_term.py  substituent.py
local_classyfire/services/: classyfire_client.py  classyfire_lookup_service.py  classyfire_query_repository.py  classyfire_repository.py  classyfire_result.py  session.py  update_by_inchikey.py
tests/: TestAnnotate.py
tests/fixtures/: annotate_input.mgf  annotate_input.msp  annotate_missing_input.msp
(+25 files in other folders)
